--- a/app/layout/topnav.html
+++ b/app/layout/topnav.html
@@ -1,14 +1,14 @@
 
-<div class="navbar navbar-default text-center">
+<nav class="navbar navbar-default text-center">
   <div class="container">
     <div class="navbar-header">
       <a class="navbar-brand" href="">MLJS</a>
     </div>
-    <div class="">
+    <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li>Link</li>
-        <li>Link</li>
+        <li class="active"><a href="">Link <span class="sr-only">(current)</span></a></li>
+        <li><a href="">Link</a></li>
       </ul>
     </div>
   </div>
-</div>
+</nav>
