Adds images for examples and more examples to list. #1

--- a/app/components/home/example.html
+++ b/app/components/home/example.html
@@ -1,6 +1,4 @@
 <div class="col-sm-4 col-sm-offset-1">
-  <p>
-    test
-  </p>
+  <img ng-src="{{item.url}}" alt="{{item.alt}}" />
   {{item.name}}
 </div>
