Moves item bindings inside div. #1

--- a/app/components/home/example.html
+++ b/app/components/home/example.html
@@ -1,4 +1,6 @@
 <div class="col-sm-4 col-sm-offset-1">
-  <img ng-src="{{item.url}}" alt="{{item.alt}}" />
-  {{item.name}}
+  <div class="example-item">
+    <img ng-src="{{item.url}}" alt="{{item.alt}}" />
+    {{item.name}}
+  </div>
 </div>
