--- a/app/layout/topnav.html
+++ b/app/layout/topnav.html
@@ -2,12 +2,12 @@
 <nav class="navbar navbar-default text-center">
   <div class="container">
     <div class="navbar-header">
-      <a class="navbar-brand" href="">MLJS</a>
+      <a class="navbar-brand" href="#!/">MLJS</a>
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
         <li class="active"><a href="">Link <span class="sr-only">(current)</span></a></li>
-        <li><a href="">Link</a></li>
+        <li><a href="#!/problems">Example Problems</a></li>
       </ul>
     </div>
   </div>
