Routes each example to it's own view. #3

--- a/app/components/home/example.html
+++ b/app/components/home/example.html
@@ -1,6 +1,6 @@
 <div class="col-sm-4 col-sm-offset-1">
   <div class="example-item">
     <img ng-src="{{item.url}}" alt="{{item.alt}}" />
-    {{item.name}}
+    <a href='Problems/{{item.name}}'>{{item.name}}</a>
   </div>
 </div>
