Styles home page.

--- a/app/components/home/home.html
+++ b/app/components/home/home.html
@@ -10,8 +10,8 @@
   </p>
 </div>
 <div class='examples'>
-  <div class='row' >
-    <div class='example' ng-repeat='item in home.list'>
+  <div class='' >
+    <div class='example col-sm-8 col-sm-offset-2' ng-repeat='item in home.list'>
       <example></example>
     </div>
 
