--- a/app/components/home/example.html
+++ b/app/components/home/example.html
@@ -1,6 +1,10 @@
-<div class="col-sm-4 col-sm-offset-1">
-  <div class="example-item">
-    <img ng-src="{{item.url}}" alt="{{item.alt}}" />
-    <a href='Problems/{{item.name}}'>{{item.name}}</a>
+<div class='row'>
+  <div class='col-sm-5'>
+    <img class='img-responsive' ng-src='{{item.url}}' alt='{{item.alt}}'>
+  </div>
+  <div class='col-sm-4 col-sm-offeset-2'>
+    <h2>{{item.name}}</h2>
+    <p>{{item.text}}</p>
+    <a class='btn btn-success' href='Problems/{{item.name}}' role='button'>Get Started!</a>
   </div>
 </div>
