--- a/app/layout/topnav.html
+++ b/app/layout/topnav.html
@@ -1,13 +1,13 @@
 
-<nav class="navbar navbar-default text-center">
-  <div class="container">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#!/">MLJS</a>
+<nav class='navbar navbar-default text-center'>
+  <div class='container'>
+    <div class='navbar-header'>
+      <a class='navbar-brand' href='#!/'>MLJS</a>
     </div>
-    <div class="collapse navbar-collapse">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="">Link <span class="sr-only">(current)</span></a></li>
-        <li><a href="#!/problems">Example Problems</a></li>
+    <div class='collapse navbar-collapse'>
+      <ul class='nav navbar-nav'>
+        <li class='active'><a href=''>Link <span class='sr-only'>(current)</span></a></li>
+        <li><a href='#!/problems'>Example Problems</a></li>
       </ul>
     </div>
   </div>
