--- a/app/components/home/example.html
+++ b/app/components/home/example.html
@@ -1,10 +1,10 @@
-<div class='row'>
+<div class='row example'>
   <div class='col-sm-5'>
     <img class='img-responsive' ng-src='{{item.url}}' alt='{{item.alt}}'>
   </div>
   <div class='col-sm-4 col-sm-offeset-2'>
-    <h2>{{item.name}}</h2>
+    <h3>{{item.name}}</h3>
     <p>{{item.text}}</p>
-    <a class='btn btn-success' href='Problems/{{item.name}}' role='button'>Get Started!</a>
+    <a class='btn btn-success' href='#!/tutorial/{{item.name}}' role='button'>Get Started!</a>
   </div>
 </div>
