Adds prismjs to highlight code blocks. #4

--- a/app/components/tutorials/tutorials.html
+++ b/app/components/tutorials/tutorials.html
@@ -7,9 +7,8 @@
   <div ng-repeat='item in tutorial.content'>
     <div class="row">
       <div class="col-sm-6">
-        <pre>
-          {{item.snip}}
-        </pre>
+        <pre class="language-javascript"><code >{{item.snip}}</code></pre>
+        {{item.snip}}
       </div>
       <div class="col-sm-5 col-sm-offset-1">
         <p>
